Added Exception Handler, Logger, mspace
* Exception Handling is in place
* Logger (Thanks to github.com/rxi) is in place
* Basic memory space functions to fetch and set registers and
memory segments are in place.

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,6 +1,10 @@
 cmake_minimum_required(VERSION 3.2)
 project(atari)
-add_library(add add.c)
-add_executable(a main.c)
-target_link_libraries(a add)
-target_link_libraries(a SDL2)
+#total_objects = main mspace err
+add_library(mspace mspace.c)
+add_library(main main.c)
+add_library(except except.c)
+add_library(log log.c)
+add_executable(a main except mspace log)
+target_link_libraries(main except mspace log)
+#target_link_libraries(a SDL2)
