cpu.c and some restructuring
* Added cpu.c and established a framework for all the
instructions in the instr set of 6502 using the hash-table-function-
dispatch strategy.

* build directory has been removed as it is platform dependent.

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -5,6 +5,9 @@ add_library(mspace mspace.c)
 add_library(main main.c)
 add_library(except except.c)
 add_library(log log.c)
-add_executable(a main except mspace log)
+add_library(cpu cpu.c)
+add_executable(a main except mspace log cpu)
+target_link_libraries(mspace log except)
+target_link_libraries(cpu log)
 target_link_libraries(main except mspace log)
 #target_link_libraries(a SDL2)
