Added Vacant/Invalid Instructions
* Used to crash upon encountering an inst
for which no function is mapped.
This patch maps vac() [stands for vacant] function to
all "Future Expansion" instructions.

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,6 +1,9 @@
 cmake_minimum_required(VERSION 3.2)
 project(atari)
+set(CMAKE_BUILD_TYPE Debug)
+set(VERBOSE 1)
 #total_objects = main mspace err
+add_compile_options(-Wall -Wextra -pedantic)
 add_library(mspace mspace.c)
 add_library(main main.c)
 add_library(except except.c)
@@ -8,6 +11,6 @@ add_library(log log.c)
 add_library(cpu cpu.c)
 add_executable(a main except mspace log cpu)
 target_link_libraries(mspace log except)
-target_link_libraries(cpu log)
+target_link_libraries(cpu log mspace)
 target_link_libraries(main except mspace log)
 #target_link_libraries(a SDL2)
