--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -3,7 +3,7 @@ project(atari)
 set(CMAKE_BUILD_TYPE Debug)
 set(VERBOSE 1)
 #total_objects = main mspace err
-add_compile_options(-Wall -Wextra -pedantic -Wno-unused-parameter -Wno-return-type)
+add_compile_options(-Wall -Wextra -pedantic -Wno-unused-parameter -Wno-return-type -DLOG_USE_COLOR)
 add_library(mspace mspace.c)
 add_library(main main.c)
 add_library(except except.c)
