Rudimentary TIA code
Added foundational code for the TIA. The pipeline
(tia processor -> ... -> tia display) has been laid, to
some extent. Machine Cycles are now being counted (tentative).

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -9,8 +9,13 @@ add_library(main main.c)
 add_library(except except.c)
 add_library(log log.c)
 add_library(cpu cpu.c)
-add_executable(a main except mspace log cpu)
-target_link_libraries(mspace log except)
+add_library(tia tia.c)
+add_executable(a main except mspace log cpu tia)
+target_link_libraries(mspace log except tia)
 target_link_libraries(cpu log mspace)
-target_link_libraries(main except mspace log)
+target_link_libraries(tia log SDL2)
+target_link_libraries(main except mspace log tia)
+target_link_libraries(a SDL2)
+
+
 #target_link_libraries(a SDL2)
