Event handling and graceful exit
* handle_input() receives input from user. This function will not
modify the registers of the TIA.

* process_input() is a one large switch statement. This function
will modify the registers of the tia.

* emu_free() had been added. emu_init() now queues emu_free() with
atexit(3). Thus, any funtion that needs to exit may simple call
exit(3).

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -3,7 +3,7 @@ project(atari)
 set(CMAKE_BUILD_TYPE Debug)
 set(VERBOSE 1)
 #total_objects = main mspace err
-add_compile_options(-Wall -Wextra -pedantic -Wno-unused-parameter -DLOG_USE_COLOR)
+add_compile_options(-Wall -Wextra -pedantic -Wno-switch -Wno-unused-parameter -DLOG_USE_COLOR)
 add_library(mspace mspace.c)
 add_library(main main.c)
 add_library(except except.c)
