--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -14,9 +14,9 @@ add_library(pia pia.c)
 add_executable(a main except mspace log cpu tia pia)
 target_link_libraries(mspace log except tia)
 target_link_libraries(cpu log mspace)
-target_link_libraries(tia log SDL2 pia)
+target_link_libraries(tia log SDL2 pia cpu)
 target_link_libraries(pia SDL2 mspace)
-target_link_libraries(main except mspace log tia pia)
+target_link_libraries(main except mspace log tia pia SDL2)
 target_link_libraries(a SDL2)
 
 
