missile graphics, bug fix in the timer
* tests/tim.asm was returning early because lda() wasn't zero'ing
STATUS_Z. This meant

	loop
	      lda INTIM
	      bne loop
would never loop because bne would be successfull no matter the value
of INTIM as STATUS_Z would already be set by some other instruction
executed previously.

* missile graphics were added but not tested.

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -5,7 +5,7 @@ set(VERBOSE 1)
 #total_objects = main mspace err
 add_compile_options(-Wall -Wextra -pedantic -Wno-switch -Wno-unused-parameter)
 add_compile_options(-DLOG_USE_COLOR)
-#add_compile_options(-DENABLE_DISASSEMBLY)
+#add_compile_options(-DENABLE_DISASSEMBLER)
 add_library(mspace mspace.c)
 add_library(main main.c)
 add_library(except except.c)
